--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,33 @@
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-<name>interfaces</name>
-<version>0.0.0</version>
-<description>Custom Interfaces used for rho</description>
-<maintainer email="rautnalin@gmail.com">nalin</maintainer>
-<license>BSD-3</license>
+    <name>interfaces</name>
+    <version>1.0.0</version>
+    <description>Contains message and service definitions used for rho.</description>
+    <maintainer email="rautnalin@gmail.com">Nalin Raut</maintainer>
+    <license>BSD-3</license>
 
-<build_depend>rosidl_default_generators</build_depend>
+    <buildtool_depend>ament_cmake</buildtool_depend>
 
-<exec_depend>rosidl_default_runtime</exec_depend>
+    <buildtool_depend>rosidl_default_generators</buildtool_depend>
+    
+    <depend>rclpp</depend>
+    
+    <build_depend>builtin_interfaces</build_depend>
+    <build_depend>geometry_msgs</build_depend>
+    <build_depend>std_msgs</build_depend>
+  
+    <exec_depend>builtin_interfaces</exec_depend>
+    <exec_depend>geometry_msgs</exec_depend>
+    <exec_depend>rosidl_default_runtime</exec_depend>
+    <exec_depend>std_msgs</exec_depend>
 
-<member_of_group>rosidl_interface_packages</member_of_group>
+    <member_of_group>rosidl_interface_packages</member_of_group>
+
+    <export>
+        <build_type>ament_cmake</build_type>
+    </export>
+</package>
+
+
+
